--- a/src/index.jade
+++ b/src/index.jade
@@ -11,5 +11,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black")
     link(rel="icon" type="image/x-icon" href="/favicon.ico")
+    link(rel='stylesheet' href='css/app.css')
   body(md-theme="blue" layout="row" ng-controller="AppCtrl")
+    script(src='js/app.js')
 
