--- a/src/index.jade
+++ b/src/index.jade
@@ -84,4 +84,5 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="js/modules/sidenav/sidenav.js")
     script(src="js/modules/containers/containers.js")
     script(src="js/modules/images/images.js")
+    script(src="js/modules/board/board.js")
 
