--- a/src/index.jade
+++ b/src/index.jade
@@ -11,11 +11,16 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     meta(name="apple-mobile-web-app-capable" content="yes")
     meta(name="apple-mobile-web-app-status-bar-style" content="black")
     link(rel="icon" type="image/x-icon" href="/favicon.ico")
-
+    link(rel="stylesheet" href="bower_components/angular/angular-csp.css")
     link(rel="stylesheet" href="bower_components/angular-material/angular-material.css")
     link(rel="stylesheet" href="bower_components/angular-material/themes/blue-theme.css")
     link(rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css")
+    link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-navigation.css")
+    link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-image.css")
+    link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-content.css")
+    link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-action.css")
     link(rel='stylesheet' href='css/app.css')
+    link(rel='stylesheet' href='css/svg-icons.css')
   body(md-theme="blue" layout="row" ng-controller="SidenavCtrl")
 
     md-sidenav(layout="column"
@@ -52,10 +57,10 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
       md-toolbar(layout="column" ng-click="openMenu()" class="md-blue-theme md-toolbar-tools" flex)
         div(layout="row" layout-align="center center" flex)
           md-button(class="menu-icon" hide-gt-sm aria-label="Toggle Menu" style="position: relative; top: -5px;")
-            md-icon(icon="bower_components/material-design-icons/navigation/svg/production/ic_menu_24px.svg")
+            div.icon.svg-ic_menu_24px
           div(style="line-height: 28px;" hide-sm ng-if="menu.currentSection.name") {{menu.currentSection.name}}
           span(layout="column" class="menu-separator-icon" ng-if="menu.currentPage" style="padding: 0 10px;")
-            img(style="height: 16px;" src="bower_components/material-design-icons/navigation/svg/production/ic_chevron_right_24px.svg" alt="" aria-hidden="true" hide-sm)
+            div.icon.svg-ic_chevron_right_24px(aria-hidden="true" hide-sm)
           div(style="line-height: 28px;" ng-bind="menu.currentPage")
           div(flex)
       md-content(layout="column" class="md-padding" ui-view flex)
