--- a/src/js/modules/containers/views/containers.tpl.jade
+++ b/src/js/modules/containers/views/containers.tpl.jade
@@ -25,14 +25,14 @@ div(layout="column" layout-fill class="images" ng-controller="ContainersCtrl" fl
       md-item(style="position: absolute; right: 8px;")
         md-item-content
           md-button(aria-label="Search" ng-click="search()")
-            img(src="bower_components/material-design-icons/action/svg/production/ic_search_24px.svg" style="width: 24px; height: 24px;")
+            div.icon.svg-ic_search_24px
 
   md-content(style="margin-top: 16px;")
     md-list
       md-item(ng-repeat="container in containers")
         md-item-content
           div(class="md-tile-left")
-            img(src="bower_components/material-design-icons/image/svg/production/ic_crop_original_24px.svg" style="width: 24px; height: 24px; margin: 16px;")
+            div.icon.svg-ic_crop_original_24px(style="margin: 0 auto;")
           div(class="md-tile-content")
             h3(ng-init="container.Id = (container.Id | limitTo: 12)" title="{{ container.Id }}")
               span ID:
