--- a/src/js/modules/images/views/image.tpl.jade
+++ b/src/js/modules/images/views/image.tpl.jade
@@ -1,6 +1,12 @@
 div(layout="column" layout-fill class="images" ng-controller="ImageCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
     md-list(role="list")
+      md-item
+        md-button(md-theme="blue" aria-label="Add Component" title="Add Component")
+          div.icon.svg-ic_add_24px
+      md-item
+        md-button(md-theme="blue" aria-label="Remove Image" title="Remove Image" ng-click="destory(image)")
+          div.icon.svg-ic_clear_24px
 
   md-content(style="margin-top: 16px;")
     table(layout="column" style="padding: 8px; text-align: left; width: 100%; display: table;")
