container start/stop/restart/pause/unpause actions

--- a/src/index.jade
+++ b/src/index.jade
@@ -19,6 +19,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-image.css")
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-content.css")
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-action.css")
+    link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-av.css")
     link(rel='stylesheet' href='css/app.css')
     link(rel='stylesheet' href='css/svg-icons.css')
   body(md-theme="blue" layout="row" ng-controller="SidenavCtrl")
@@ -84,6 +85,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="js/services/index.js")
     script(src="js/services/menu.js")
     script(src="js/services/containers.js")
+    script(src="js/services/container_actions.js")
     script(src="js/services/images.js")
     script(src="js/modules/site/site.js")
     script(src="js/modules/sidenav/sidenav.js")
