mv board to canvas

--- a/src/index.jade
+++ b/src/index.jade
@@ -91,5 +91,5 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="js/modules/sidenav/sidenav.js")
     script(src="js/modules/containers/containers.js")
     script(src="js/modules/images/images.js")
-    script(src="js/modules/board/board.js")
+    script(src="js/modules/canvas/canvas.js")
 
