--- a/src/js/modules/canvas/views/canvas.tpl.jade
+++ b/src/js/modules/canvas/views/canvas.tpl.jade
@@ -1,4 +1,4 @@
-div(layout="column" layout-fill class="board" ng-controller="BoardCtrl" flex)
+div(layout="column" layout-fill class="canvas" ng-controller="CanvasCtrl" flex)
   md-toolbar(layout="column" md-theme="none" style="max-height: 64px;" flex)
     md-list(role="list")
       md-item
