--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -51,7 +51,7 @@
   margin-after: 0;
 }
 
-.board md-toolbar, .board md-content {
+.canvas md-toolbar, .canvas md-content {
   border: 1px solid #f3f3f3;
   border-radius: 3px;
 }
@@ -60,7 +60,7 @@
   border-radius: 3px;
 }
 
-.board md-list {
+.canvas md-list {
   padding: 14px;
 }
 
