--- a/src/index.jade
+++ b/src/index.jade
@@ -78,6 +78,8 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="bower_components/pretty-bytes/pretty-bytes.js")
     script(src="bower_components/angular-pretty-bytes/angular-pretty-bytes.js")
     script(src="bower_components/angular-loading-bar/build/loading-bar.js")
+    script(src="bower_components/moment/moment.js")
+    script(src="bower_components/angular-moment/angular-moment.js")
 
     script(src='js/config.js')
     script(src='js/app.js')
