--- a/src/js/modules/containers/views/containers.tpl.jade
+++ b/src/js/modules/containers/views/containers.tpl.jade
@@ -37,8 +37,12 @@ div(layout="column" layout-fill class="images" ng-controller="ContainersCtrl" fl
             h3(ng-init="container.Id = (container.Id | limitTo: 12)" title="{{ container.Id }}")
               span ID:
               a(ng-href="#/containers/{{ container.Id }}") {{ container.Id }}
-            p Created: {{ container.Created + '000' | date:'yyyy-MM-dd HH:mm:ss Z' }}
-            p Status: {{ container.Status }}
+            p
+              span Created: 
+              span(am-time-ago="container.Created" am-preprocess="unix")
+            p
+              span Status: 
+              span {{ container.Status }}
             p Names: {{ container.Names.join(', ') }}
             p Ports: {{ container.Ports.join(', ') }}
             p(ng-if="container.SizeRw >= 0") SizeRw: {{ container.SizeRw | prettyBytes }}
