--- a/src/index.jade
+++ b/src/index.jade
@@ -14,6 +14,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     link(rel="stylesheet" href="bower_components/angular/angular-csp.css")
     link(rel="stylesheet" href="bower_components/angular-material/angular-material.css")
     link(rel="stylesheet" href="bower_components/angular-material/themes/blue-theme.css")
+    link(rel="stylesheet" href="bower_components/angular-material/themes/light-green-theme.css")
     link(rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css")
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-navigation.css")
     link(rel="stylesheet" href="bower_components/material-design-icons/sprites/svg-sprite/svg-sprite-image.css")
