--- a/src/js/modules/canvas/views/canvas.tpl.jade
+++ b/src/js/modules/canvas/views/canvas.tpl.jade
@@ -1,5 +1,5 @@
-div(layout="column" layout-fill class="canvas" ng-controller="CanvasCtrl" flex)
-  md-toolbar(layout="column" md-theme="none" style="max-height: 64px;" flex)
+div(layout="column" layout-fill class="images canvas" ng-controller="CanvasCtrl" flex)
+  md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
     md-list(role="list")
       md-item
         md-button(ng-click="addNode()" md-theme="blue" aria-label="Add Component" title="Add Component")
