--- a/src/js/modules/containers/views/containers.tpl.jade
+++ b/src/js/modules/containers/views/containers.tpl.jade
@@ -1,29 +1,29 @@
 div(layout="column" layout-fill class="images" ng-controller="ContainersCtrl" flex)
   md-toolbar(layout="column" md-theme="none" flex style="max-height: 64px;")
-    md-list(layout="row" role="list")
-      md-item
+    md-list(layout="row" role="list" md-theme="blue")
+      md-item(flex=10 layout-align="center center" layout="column")
+        md-item-content(layout-align="center center")
+          md-tooltip All
+          md-switch(ng-model="queryParams.all" aria-label="All")
+      md-item(flex=10 layout-align="center center" layout="column")
+        md-item-content(layout-align="center center")
+          md-tooltip Size
+          md-switch(ng-model="queryParams.size" aria-label="Size")
+      md-item(flex=20 layout-align="center center" layout="column")
+        md-item-content(layout-align="center center")
+          md-tooltip Since
+          md-text-float(label="Since" ng-model="queryParams.since")
+      md-item(flex=20 layout-align="center center" layout="column")
+        md-item-content(layout-align="center center")
+          md-tooltip Before
+          md-text-float(label="Before" ng-model="queryParams.before")
+      md-item(flex=20 layout-align="center center" layout="column")
+        md-item-content(layout-align="center center")
+          md-tooltip Limit
+          md-text-float(label="Limit" ng-model="queryParams.limit")
+      md-item(style="position: absolute; right: 0;")
         md-item-content
-          md-switch(md-theme="blue" ng-model="queryParams.all" aria-label="All") All
-      md-item
-        md-item-content
-          md-switch(md-theme="blue" ng-model="queryParams.size" aria-label="Size") Size
-      md-item
-        md-item-content
-          div(style="padding: 8px;")
-            input(id="queryParamsSince" ng-model="queryParams.since" style="font-size: 10px; max-width: 70px; border: 1px solid transparent; border-bottom: 1px solid #f2f2f2;")
-            label(for="queryParamsSince") Since
-      md-item
-        md-item-content
-          div(style="padding: 8px;")
-            input(id="queryParamsBefore" ng-model="queryParams.before" style="font-size: 10px; max-width: 70px; border: 1px solid transparent; border-bottom: 1px solid #f2f2f2;")
-            label(for="queryParamsBefore") Before
-      md-item
-        md-item-content
-          div(style="padding: 8px;")
-            input(id="queryParamsLimit" ng-model="queryParams.limit" style="max-width: 50px; border: 1px solid transparent; border-bottom: 1px solid #f2f2f2;")
-            label(for="queryParamsLimit") Limit
-      md-item(style="position: absolute; right: 8px;")
-        md-item-content
+          md-tooltip Search
           md-button(aria-label="Search" ng-click="search()")
             div.icon.svg-ic_search_24px
 
