add image actions

--- a/src/index.jade
+++ b/src/index.jade
@@ -90,6 +90,7 @@ html(lang="en" class="no-js" ng-app="dockerboard" ng-strict-di)
     script(src="js/services/containers.js")
     script(src="js/services/container_actions.js")
     script(src="js/services/images.js")
+    script(src="js/services/image_actions.js")
     script(src="js/modules/site/site.js")
     script(src="js/modules/sidenav/sidenav.js")
     script(src="js/modules/containers/containers.js")
