--- a/src/js/modules/images/views/image.tpl.jade
+++ b/src/js/modules/images/views/image.tpl.jade
@@ -12,7 +12,7 @@ div(layout="column" layout-fill class="images" ng-controller="ImageCtrl" flex)
       md-item
         md-button(aria-label="History" ng-click="history($event)")
           md-tooltip Image History
-          div.icon.svg-ic_history_24px
+          a.icon.svg-ic_history_24px(ng-href="#/images/{{imageShortId}}/history" layout)
 
   md-content(style="margin-top: 16px;")
     table(layout="column" style="padding: 8px; text-align: left; width: 100%; display: table;")
