image history page

--- a/src/js/modules/images/views/image.tpl.jade
+++ b/src/js/modules/images/views/image.tpl.jade
@@ -10,7 +10,7 @@ div(layout="column" layout-fill class="images" ng-controller="ImageCtrl" flex)
           md-tooltip Remove Image
           div.icon.svg-ic_clear_24px
       md-item
-        md-button(aria-label="History" ng-click="history($event)")
+        md-button(aria-label="History")
           md-tooltip Image History
           a.icon.svg-ic_history_24px(ng-href="#/images/{{imageShortId}}/history" layout)
 
