--- a/src/js/modules/images/views/images.tpl.jade
+++ b/src/js/modules/images/views/images.tpl.jade
@@ -17,6 +17,9 @@ div(layout="column" layout-fill class="images" ng-controller="ImagesCtrl" flex)
 
   md-content(style="margin-top: 16px;")
     md-list
+      md-item(ng-if="images.length === 0")
+        md-item-content(layout-align="center center")
+          div No Images
       md-item(ng-repeat="image in images")
         md-divider(ng-if="!$first")
         md-item-content
