--- a/src/js/modules/containers/views/containers.tpl.jade
+++ b/src/js/modules/containers/views/containers.tpl.jade
@@ -29,6 +29,9 @@ div(layout="column" layout-fill class="images" ng-controller="ContainersCtrl" fl
 
   md-content(style="margin-top: 16px;")
     md-list
+      md-item(ng-if="containers.length === 0")
+        md-item-content(layout-align="center center")
+          div No Containers
       md-item(ng-repeat="container in containers")
         md-divider(ng-if="!$first")
         md-item-content
