--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -51,6 +51,16 @@
   margin-after: 0;
 }
 
+.app-footer {
+  width: 100%;
+  bottom: 0;
+  position: absolute;
+  padding: 16px;
+  border: 0;
+  text-align: center;
+  font-size: 10px;
+}
+
 .canvas md-toolbar, .canvas md-content {
   border: 1px solid #f3f3f3;
   border-radius: 3px;
